# HuggingfaceTransformer

./: .gitignore  LICENSE  Makefile  PROFILING_ANALYSIS_GUIDE.md  PROFILING_GUIDE.md  PROFILING_QUICKSTART.md  README.md  Untitled-1.ipynb  checkpoints.txt  environment.yml  jupyterNotebook.sbatch  pll_vep_auc.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  scaling_laws.ipynb  tokenize_train_6267169.out  uniref90.ipynb
.github/: pull_request_template.md
char_tokenizer/: tokenizer.json
gLM/: __init__.py
gLM/callbacks/: __init__.py  loss_print.py  percent_identity.py  profiler_callback.py  timer.py  variant_effect.py
gLM/collator/: __init__.py  mlm_collator.py  phylo_collator.py
gLM/data_utils/: __init__.py  dynamic_batch.py  dynamic_batching.py  seq_pair_sampler.py  truncating_collator.py  uniref_cluster_sampler.py
gLM/dataset/: __init__.py  in_memory_dataset.py  seq_pair_iterable.py  seq_pair_map.py  uniref90_pair_arrow_fasta.py  uniref90_pair_arrow_lmdb.py  uniref_iterable.py
gLM/models/: __init__.py  protein_BART.py  protein_T5.py  protein_T5Gemma.py  protein_bert.py
gLM/sequences/: __init__.py  pairwise_align.py  seq_fetcher.py
gLM/tokenizers/: __init__.py  loader.py  phylo_tokenizer.py
gLM/train_utils/: __init__.py  custom_batch_size_trainer.py  custom_trainer.py  phylo_trainer.py
genelm/: __init__.py  build_char_tokenizer.py  callbacks.py  create_small_chunks.py  modernBERT_long_ctxt_length.py  modernBERT_single_gpu.py  multi_gpu_train.py  tokenize_dataset.py  tokenize_uniref.py
genelm/evaluation/: __init__.py  callbacks.py
genelm/models/: __init__.py  protein_bert.py
genelm/tokenization/: __init__.py  loader.py
genelm/training/: __init__.py  data.py
genelm/utils/: __init__.py
local_scripts/: train_lambda.sh  train_lambda_with_profiling.sh  train_local.sh
notebooks/00_dynamic_batching/: 0928_dynamic_batching_exploration.ipynb
phylo_char_tokenizer_updated/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
python_scripts/: build_char_tokenizer.py  collator.py  create_small_chunks.py  debug.py  dms_benchmark.py  eval_T5Gemma_checkpoints.py  make_uniref90_arrow.py  modernBERT_ddp.py  modernBERT_ddp_dynamic_batch.py  modernBERT_long_ctxt_length.py  modernBERT_packing.py  modernBERT_single_gpu.py  multi_gpu_train.py  pll.py  pll_new.py  test_dynamic_batching.py  tokenize_dataset.py  tokenize_uniref.py  train.py  train_modernBERT.py  train_pre_trained_modernBERT.py  zero_shot_vep.py
slurm_scripts/: create_env_full.sh  dms.sh  eval_T5Gemma.sh  get_checkpts.sh  gpu_check.sh  install_flash_attn.sh  install_flash_attn_2.sh  launch_vep_jobs.sh  pll_vep.sh  pll_vep_array.sh  test_gpu.sh  tokenize_dataset.sh  tokenize_train.sh  train.sh  train_1B.sh  train_bert.sh  train_bert_113M.sh  train_bert_1B.sh  train_bert_34M.sh  train_bert_665M.sh  train_bert_DDP.sh  train_bert_flash_attn.sh  train_bert_reservation.sh  train_mlm_control_for_phylo.sh  train_per_trained_bert_665M.sh  train_phylo.sh  train_pre_trained_bert_113M.sh  train_pre_trained_bert_1B.sh  train_pre_trained_bert_34M.sh  train_pre_trained_bert_665M.sh  train_unet_single_gpu.sh  uniref90_arrow.sh  zero_shot_vep.sh
uniref_data_processing/: build_pairs_worker.py  merge_dedupe.py  slurm_build_pairs_array.sh  split_tsv.py  uniref_xml_to_tsv.py
